ferrite-os/native/core/include/gpu/gpu_hot_runtime.h


#define GPU_HOT_MAX_STREAMS         100000  
#define TLSF_FL_INDEX_MAX           34
struct GPUHotRuntime;
typedef struct GPUHotRuntime GPUHotRuntime;
typedef struct PTXOSTask {
    uint32_t task_id;
    uint32_t opcode;
    uint32_t priority;
    bool active;
    bool completed;
    void* args[PTX_MAX_TASK_ARGS];
    uint64_t submitted_at;
    uint64_t completed_at;
} PTXOSTask;
typedef struct PTXTaskQueue {
    PTXOSTask tasks[PTX_MAX_QUEUE_SIZE];
    volatile uint32_t head;
    volatile uint32_t tail;
    volatile uint32_t lock;
} PTXTaskQueue;
typedef struct VMMPageEntry {
    void* gpu_addr;             
    void* original_addr;        
    void* host_addr;            
    size_t size;                
    uint32_t flags;             
    uint64_t last_access;       
    uint32_t access_count;      
    bool resident;              
    bool dirty;                 
    bool pinned;                
} VMMPageEntry;
typedef struct VMMState {
    GPUHotRuntime* runtime;   
    VMMPageEntry pages[VMM_MAX_PAGES];
    uint32_t num_pages;
    uint32_t resident_pages;
    uint32_t swapped_pages;
    void* swap_regions[VMM_MAX_SWAP_REGIONS];
    size_t swap_region_sizes[VMM_MAX_SWAP_REGIONS];
    uint32_t num_swap_regions;
    size_t total_swap_size;
    size_t used_swap_size;
    uint64_t page_faults;
    uint64_t swap_ins;
    uint64_t swap_outs;
    uint64_t evictions;
} VMMState;
typedef enum VFSNodeType {
    VFS_NODE_FILE,
    VFS_NODE_DIRECTORY,
    VFS_NODE_TENSOR,
    VFS_NODE_STREAM,
    VFS_NODE_DEVICE
} VFSNodeType;
typedef struct VFSInode {
    uint32_t inode_id;
    char name[GPU_HOT_MAX_NAME_LEN];
    char path[VFS_MAX_PATH_LEN];
    VFSNodeType type;
    void* data;
    size_t size;
    int dims;
    int shape[8];
    int dtype;  
    struct VFSInode* parent;
    struct VFSInode* first_child;
    struct VFSInode* next_sibling;
    uint64_t created_at;
    uint64_t modified_at;
    uint64_t accessed_at;
    uint32_t mode;
    uint32_t uid;
    uint32_t gid;
    bool active;
} VFSInode;
typedef struct VFSFileHandle {
    uint32_t fd;
    VFSInode* inode;
    size_t offset;
    uint32_t flags;
    bool is_open;
} VFSFileHandle;
typedef struct VFSState {
    GPUHotRuntime* runtime;   
    VFSInode inodes[VFS_MAX_NODES];
    uint32_t num_inodes;
    VFSInode* root;
    VFSFileHandle open_files[VFS_MAX_OPEN_FILES];
    uint32_t num_open_files;
    uint32_t next_fd;
    uint64_t reads;
    uint64_t writes;
    uint64_t opens;
    uint64_t closes;
} VFSState;
typedef struct PTXSystemState {
    uint32_t auth_token;
    volatile int active_processes;
    volatile int active_tasks;
    volatile int max_priority_active;
    volatile size_t total_vram_used;
    volatile bool watchdog_alert;
    volatile bool kernel_running;
    volatile bool shutdown_requested;
    volatile int active_priority_level;
    volatile uint64_t signal_mask;
    volatile uint32_t interrupt_cnt;
    PTXTaskQueue queue;
    volatile uint64_t total_ops;
    volatile uint32_t fs_node_count;
    VMMState* vmm;
    VFSState* vfs;
} PTXSystemState;
typedef struct GPUHotStats {
    size_t vram_allocated;
    size_t vram_used;
    size_t vram_free;
    float gpu_utilization;      
    float mem_utilization;      
    uint32_t sm_clock_mhz;      
    uint32_t mem_clock_mhz;     
    float power_w;              
    int32_t temperature_c;      
    bool nvml_valid;            
    float hw_ops_per_sec;       
    float gflops_total;         
    bool cupti_valid;           
    int active_streams;         
    int stream_poll_count;      
    uint8_t stream_busy[128];   
    int registered_kernels;
    int shm_count;
    uint64_t total_ops;
    float avg_latency_us;
    bool watchdog_tripped;
} GPUHotStats;
typedef struct TLSFPoolStats {
    size_t total_pool_size;
    size_t allocated_bytes;
    size_t free_bytes;
    size_t peak_allocated;
    size_t largest_free_block;
    size_t smallest_free_block;
    uint32_t total_blocks;
    uint32_t free_blocks;
    uint32_t allocated_blocks;
    uint32_t fallback_count;
    float utilization_percent;
    float fragmentation_ratio;
    float external_fragmentation;
    uint32_t free_list_counts[34];  
    uint32_t hash_collisions;
    uint32_t max_chain_length;
    float avg_chain_length;
    uint64_t total_allocations;
    uint64_t total_frees;
    uint32_t total_splits;
    uint32_t total_merges;
    bool is_healthy;
    bool needs_defrag;
} TLSFPoolStats;
#define TLSF_MAX_OWNERS 64
typedef struct TLSFOwnerUsage {
    uint32_t owner_id;
    size_t allocated_bytes;
    uint32_t block_count;
} TLSFOwnerUsage;
typedef struct TLSFOwnerStats {
    TLSFOwnerUsage owners[TLSF_MAX_OWNERS];
    uint32_t num_owners;
} TLSFOwnerStats;
#define TLSF_EVENT_RING_SIZE 256
typedef struct TLSFAllocEvent {
    uint64_t timestamp;
    size_t size;
    uint32_t owner_id;
    uint32_t alloc_id;
    uint8_t event_type;   
    uint8_t _pad[3];
} TLSFAllocEvent;
typedef struct TLSFEventRing {
    TLSFAllocEvent events[TLSF_EVENT_RING_SIZE];
    uint32_t head;    
    uint32_t count;   
} TLSFEventRing;
typedef struct TLSFHealthReport {
    bool is_valid;
    bool has_memory_leaks;
    bool has_corrupted_blocks;
    bool has_broken_chains;
    bool has_hash_errors;
    int error_count;
    char error_messages[TLSF_MAX_ERRORS][256];
} TLSFHealthReport;
typedef struct GPUHotSystemSnapshot {
    uint64_t total_ops;
    int active_processes;
    int active_tasks;
    int max_priority_active;
    size_t total_vram_used;
    bool watchdog_alert;
    bool kernel_running;
    bool shutdown_requested;
    int active_priority_level;
    uint64_t signal_mask;
    uint32_t interrupt_cnt;
    uint32_t queue_head;
    uint32_t queue_tail;
    uint32_t queue_lock;
} GPUHotSystemSnapshot;
typedef struct GPUHotConfig {
    float pool_fraction;        
    size_t fixed_pool_size;     
    size_t min_pool_size;       
    size_t max_pool_size;       
    size_t reserve_vram;        
    bool enable_leak_detection; 
    bool enable_pool_health;    
    float warning_threshold;    
    bool force_daemon_mode;     
    bool quiet_init;            
    unsigned int max_streams;   
    bool single_pool_strict;    
    bool prefer_orin_unified_memory; 
    bool use_managed_pool;           
    bool allow_env_overrides;        
} GPUHotConfig;
GPUHotConfig gpu_hot_default_config(void);
GPUHotRuntime* gpu_hot_init(int device_id, const char* token);
GPUHotRuntime* gpu_hot_init_with_config(int device_id, const char* token, const GPUHotConfig* config);
void gpu_hot_shutdown(GPUHotRuntime* runtime);
void gpu_hot_keepalive(GPUHotRuntime* runtime);
void* gpu_hot_alloc(GPUHotRuntime* runtime, size_t size);
void gpu_hot_free(GPUHotRuntime* runtime, void* ptr);
void* gpu_hot_alloc_async(GPUHotRuntime* runtime, size_t size, cudaStream_t stream);
void gpu_hot_free_async(GPUHotRuntime* runtime, void* ptr, cudaStream_t stream);
void gpu_hot_poll_deferred(GPUHotRuntime* runtime, int max_drain);
bool gpu_hot_can_allocate(GPUHotRuntime* runtime, size_t size);
size_t gpu_hot_get_max_allocatable(GPUHotRuntime* runtime);
bool gpu_hot_owns_ptr(GPUHotRuntime* runtime, void* ptr);
void* gpu_hot_alloc_owned(GPUHotRuntime* runtime, size_t size, uint32_t owner_id);
void gpu_hot_free_owner(GPUHotRuntime* runtime, uint32_t owner_id);
void gpu_hot_get_owner_stats(GPUHotRuntime* runtime, TLSFOwnerStats* stats);
void gpu_hot_get_alloc_events(GPUHotRuntime* runtime, TLSFEventRing* ring_out);
void ptx_hook_init(GPUHotRuntime* runtime, bool verbose);
void ptx_hook_disable(void);
bool ptx_hook_owns_ptr(void* ptr);