ferrite-os/crates/internal/ptx-sys/src/lib.rs


#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VFSFileHandle {
    pub fd: u32,
    pub inode: *mut VFSInode,
    pub offset: size_t,
    pub flags: u32,
    pub is_open: bool,
}

#[repr(C)]
pub struct VFSState {
    pub runtime: *mut GPUHotRuntime,
    pub inodes: [VFSInode; 1024],
    pub num_inodes: u32,
    pub root: *mut VFSInode,
    pub open_files: [VFSFileHandle; 256],
    pub num_open_files: u32,
    pub next_fd: u32,
    pub reads: u64,
    pub writes: u64,
    pub opens: u64,
    pub closes: u64,
}

#[repr(C)]
#[derive(Debug)]
pub struct PTXSystemState {
    pub auth_token: u32,
    pub active_processes: c_int,
    pub active_tasks: c_int,
    pub max_priority_active: c_int,
    pub total_vram_used: size_t,
    pub watchdog_alert: bool,
    pub kernel_running: bool,
    pub shutdown_requested: bool,
    pub active_priority_level: c_int,
    pub signal_mask: u64,
    pub interrupt_cnt: u32,
    pub queue: PTXTaskQueue,
    pub total_ops: u64,
    pub fs_node_count: u32,
    pub vmm: *mut VMMState,
    pub vfs: *mut VFSState,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GPUHotStats {
    pub vram_allocated: size_t,
    pub vram_used: size_t,
    pub vram_free: size_t,
    pub gpu_utilization: f32,
    pub mem_utilization: f32,
    pub sm_clock_mhz: u32,
    pub mem_clock_mhz: u32,
    pub power_w: f32,
    pub temperature_c: i32,
    pub nvml_valid: bool,
    pub hw_ops_per_sec: f32,
    pub gflops_total: f32,
    pub cupti_valid: bool,
    pub active_streams: c_int,
    pub stream_poll_count: c_int,
    pub stream_busy: [u8; 128],
    pub registered_kernels: c_int,
    pub shm_count: c_int,
    pub total_ops: u64,
    pub avg_latency_us: f32,
    pub watchdog_tripped: bool,
}

impl Default for GPUHotStats {
    fn default() -> Self {
        // SAFETY: all-zeros is valid for this C struct (matches memset behavior)
        unsafe { std::mem::zeroed() }
    }
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TLSFPoolStats {
    pub total_pool_size: size_t,
    pub allocated_bytes: size_t,
    pub free_bytes: size_t,
    pub peak_allocated: size_t,
    pub largest_free_block: size_t,
    pub smallest_free_block: size_t,
    pub total_blocks: u32,
    pub free_blocks: u32,
    pub allocated_blocks: u32,
    pub fallback_count: u32,
    pub utilization_percent: f32,
    pub fragmentation_ratio: f32,
    pub external_fragmentation: f32,
    pub free_list_counts: [u32; 34],  // Must match TLSF_FL_INDEX_MAX=34
    pub hash_collisions: u32,
    pub max_chain_length: u32,
    pub avg_chain_length: f32,
    pub total_allocations: u64,
    pub total_frees: u64,
    pub total_splits: u32,
    pub total_merges: u32,
    pub is_healthy: bool,
    pub needs_defrag: bool,
}

impl Default for TLSFPoolStats {
    fn default() -> Self {
        Self {
            total_pool_size: 0,
            allocated_bytes: 0,
            free_bytes: 0,
            peak_allocated: 0,
            largest_free_block: 0,
            smallest_free_block: 0,
            total_blocks: 0,
            free_blocks: 0,
            allocated_blocks: 0,
            fallback_count: 0,
            utilization_percent: 0.0,
            fragmentation_ratio: 0.0,
            external_fragmentation: 0.0,
            free_list_counts: [0; 34],
            hash_collisions: 0,
            max_chain_length: 0,
            avg_chain_length: 0.0,
            total_allocations: 0,
            total_frees: 0,
            total_splits: 0,
            total_merges: 0,
            is_healthy: false,
            needs_defrag: false,
        }
    }
}

pub const TLSF_MAX_OWNERS: usize = 64;
pub const TLSF_EVENT_RING_SIZE: usize = 256;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TLSFOwnerUsage {
    pub owner_id: u32,
    pub allocated_bytes: size_t,
    pub block_count: u32,
}

#[repr(C)]
#[derive(Clone)]
pub struct TLSFOwnerStats {
    pub owners: [TLSFOwnerUsage; TLSF_MAX_OWNERS],
    pub num_owners: u32,
}

impl Default for TLSFOwnerStats {
    fn default() -> Self {
        unsafe { std::mem::zeroed() }
    }
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TLSFAllocEvent {
    pub timestamp: u64,
    pub size: size_t,
    pub owner_id: u32,
    pub alloc_id: u32,
    pub event_type: u8,
    pub _pad: [u8; 3],
}

#[repr(C)]
#[derive(Clone)]
pub struct TLSFEventRing {
    pub events: [TLSFAllocEvent; TLSF_EVENT_RING_SIZE],
    pub head: u32,
    pub count: u32,
}

impl Default for TLSFEventRing {
    fn default() -> Self {
        unsafe { std::mem::zeroed() }
    }
}

#[repr(C)]
#[derive(Debug, Clone)]
pub struct TLSFHealthReport {
    pub is_valid: bool,
    pub has_memory_leaks: bool,
    pub has_corrupted_blocks: bool,
    pub has_broken_chains: bool,
    pub has_hash_errors: bool,
    pub error_count: c_int,
    pub error_messages: [[c_char; 256]; 16],
}

impl Default for TLSFHealthReport {
    fn default() -> Self {
        Self {
            is_valid: true,
            has_memory_leaks: false,
            has_corrupted_blocks: false,
            has_broken_chains: false,
            has_hash_errors: false,
            error_count: 0,
            error_messages: [[0; 256]; 16],
        }
    }
}

#[repr(C)]
#[derive(Debug, Copy, Clone, Default)]
pub struct GPUHotSystemSnapshot {
    pub total_ops: u64,
    pub active_processes: c_int,
    pub active_tasks: c_int,
    pub max_priority_active: c_int,
    pub total_vram_used: size_t,
    pub watchdog_alert: bool,
    pub kernel_running: bool,
    pub shutdown_requested: bool,
    pub active_priority_level: c_int,
    pub signal_mask: u64,
    pub interrupt_cnt: u32,
    pub queue_head: u32,
    pub queue_tail: u32,
    pub queue_lock: u32,
}

/// Context hook statistics - tracks blocked creates, prevented switches, etc.
#[repr(C)]
#[derive(Debug, Copy, Clone, Default)]
pub struct PTXContextStats {
    pub ctx_create_blocked: u64,
    pub ctx_create_passthrough: u64,
    pub ctx_destroy_blocked: u64,
    pub ctx_switch_prevented: u64,
    pub ctx_switch_substituted: u64,
    pub primary_retain_intercepted: u64,
    pub primary_release_suppressed: u64,
    pub primary_reset_blocked: u64,
    pub primary_setflags_blocked: u64,
    pub push_substituted: u64,
    pub pop_corrected: u64,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GPUHotConfig {
    pub pool_fraction: f32,
    pub fixed_pool_size: size_t,
    pub min_pool_size: size_t,
    pub max_pool_size: size_t,
    pub reserve_vram: size_t,
    pub enable_leak_detection: bool,
    pub enable_pool_health: bool,
    pub warning_threshold: f32,
    pub force_daemon_mode: bool,
    pub quiet_init: bool,
    pub max_streams: u32,
    pub single_pool_strict: bool,
    pub prefer_orin_unified_memory: bool,
    pub use_managed_pool: bool,
}

impl Default for GPUHotConfig {
    fn default() -> Self {
        Self {
            pool_fraction: 1.0, // Must match C gpu_hot_default_config()
            fixed_pool_size: 0,
            min_pool_size: 256 * 1024 * 1024,
            max_pool_size: 0,
            reserve_vram: 0,
            enable_leak_detection: true,
            enable_pool_health: true,
            warning_threshold: 0.9,
            force_daemon_mode: false,
            quiet_init: false,
            max_streams: 16, // Must match C gpu_hot_default_config(); GPU_HOT_MAX_STREAMS is the cap, not the default
            single_pool_strict: false,
            prefer_orin_unified_memory: false,
            use_managed_pool: false,
        }
    }
}

#[repr(C)]
#[derive(Debug, Copy, Clone, Default)]
pub struct PTXTensorDesc {
    pub data: *mut c_void,
    pub elem_count: size_t,
    pub dtype: PTXDType,
    pub ndim: u32,
    pub shape: [u32; 8],
    pub strides: [u32; 8],
    pub is_contiguous: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, Default)]
pub struct PTXTensorOp {
    pub opcode: PTXTensorOpcode,
    pub dtype: PTXDType,
    pub input_a: *mut c_void,
    pub input_b: *mut c_void,
    pub output: *mut c_void,
    pub elem_count: size_t,
    pub scalar_a: f32,
    pub scalar_b: f32,
    pub reduce_dim: u32,
    pub reduce_size: u32,
    pub outer_size: u32,
    pub inner_size: u32,
    pub stream: cudaStream_t,
}

// ============================================================================
// External Functions
// ============================================================================

extern "C" {
    // Stable Runtime ABI
    pub fn ptx_stable_runtime_version() -> *const c_char;
    pub fn ptx_stable_runtime_abi_version() -> u32;
    pub fn ptx_stable_strerror(status: PTXStableStatus) -> *const c_char;
    pub fn ptx_stable_init(
        config: *const PTXStableConfig,
        out_runtime: *mut *mut PTXStableRuntime,
    ) -> PTXStableStatus;
    pub fn ptx_stable_retain(out_runtime: *mut *mut PTXStableRuntime) -> PTXStableStatus;
    pub fn ptx_stable_release(runtime: *mut PTXStableRuntime) -> PTXStableStatus;
    pub fn ptx_stable_get(out_runtime: *mut *mut PTXStableRuntime) -> PTXStableStatus;
    pub fn ptx_stable_alloc(
        runtime: *mut PTXStableRuntime,
        size: size_t,
        out_ptr: *mut *mut c_void,
    ) -> PTXStableStatus;
    pub fn ptx_stable_free(runtime: *mut PTXStableRuntime, ptr: *mut c_void) -> PTXStableStatus;
    pub fn ptx_stable_owns_ptr(
        runtime: *mut PTXStableRuntime,
        ptr: *const c_void,
        out_owned: *mut bool,
    ) -> PTXStableStatus;
    pub fn ptx_stable_get_context(
        runtime: *mut PTXStableRuntime,
        out_cu_context: *mut *mut c_void,
    ) -> PTXStableStatus;
    pub fn ptx_stable_get_stats(
        runtime: *mut PTXStableRuntime,
        out_stats: *mut PTXStableStats,
    ) -> PTXStableStatus;
    pub fn ptx_stable_get_hot_runtime(
        runtime: *mut PTXStableRuntime,
        out_gpu_hot_runtime: *mut *mut c_void,
    ) -> PTXStableStatus;

    // Core Runtime API
    pub fn gpu_hot_init(device_id: c_int, token: *const c_char) -> *mut GPUHotRuntime;
    pub fn gpu_hot_init_with_config(
        device_id: c_int,
        token: *const c_char,
        config: *const GPUHotConfig,
    ) -> *mut GPUHotRuntime;
    pub fn gpu_hot_shutdown(runtime: *mut GPUHotRuntime);
    pub fn gpu_hot_keepalive(runtime: *mut GPUHotRuntime);
    pub fn gpu_hot_default_config() -> GPUHotConfig;

    // Memory Allocation API
    pub fn gpu_hot_alloc(runtime: *mut GPUHotRuntime, size: size_t) -> *mut c_void;
    pub fn gpu_hot_free(runtime: *mut GPUHotRuntime, ptr: *mut c_void);
    pub fn gpu_hot_alloc_async(
        runtime: *mut GPUHotRuntime,
        size: size_t,
        stream: cudaStream_t,
    ) -> *mut c_void;
    pub fn gpu_hot_free_async(runtime: *mut GPUHotRuntime, ptr: *mut c_void, stream: cudaStream_t);
    pub fn gpu_hot_poll_deferred(runtime: *mut GPUHotRuntime, max_drain: c_int);
    pub fn gpu_hot_can_allocate(runtime: *mut GPUHotRuntime, size: size_t) -> bool;
    pub fn gpu_hot_get_max_allocatable(runtime: *mut GPUHotRuntime) -> size_t;
    pub fn gpu_hot_owns_ptr(runtime: *mut GPUHotRuntime, ptr: *mut c_void) -> bool;

    // Per-owner allocation API
    pub fn gpu_hot_alloc_owned(
        runtime: *mut GPUHotRuntime,
        size: size_t,
        owner_id: u32,
    ) -> *mut c_void;
    pub fn gpu_hot_free_owner(runtime: *mut GPUHotRuntime, owner_id: u32);
    pub fn gpu_hot_get_owner_stats(runtime: *mut GPUHotRuntime, stats: *mut TLSFOwnerStats);

    // Allocation event log
    pub fn gpu_hot_get_alloc_events(runtime: *mut GPUHotRuntime, ring_out: *mut TLSFEventRing);

    // CUDA Allocation Hook API
    pub fn ptx_hook_init(runtime: *mut GPUHotRuntime, verbose: bool);
    pub fn ptx_hook_disable();
    pub fn ptx_hook_owns_ptr(ptr: *mut c_void) -> bool;
